jvm args added, channel name changes, and config accessed directly.